Bug 40631 - [4.5 Regression] bootstrap with Ada fails on __gnat_backtrace warning on mips-linux
Summary: [4.5 Regression] bootstrap with Ada fails on __gnat_backtrace warning on mips...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: ada (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: 4.5.0
Assignee: Laurent GUERBY
URL:
Keywords: build
Depends on:
Blocks:
 
Reported: 2009-07-03 10:58 UTC by Laurent GUERBY
Modified: 2009-07-04 10:15 UTC (History)
1 user (show)

See Also:
Host: mips-linux
Target: mips-linux
Build: mips-linux
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent GUERBY 2009-07-03 10:58:12 UTC
/n/51/guerby/build/./prev-gcc/xgcc -B/n/51/guerby/build/./prev-gcc/ -B/mnt/lemote/home/loongson/install-trunk-149181/mips64el-unknown-linux-gnu/bin/ -B/mnt/lemote/home/loongson/install-trunk-149181/mips64el\
-unknown-linux-gnu/bin/ -B/mnt/lemote/home/loongson/install-trunk-149181/mips64el-unknown-linux-gnu/lib/ -isystem /mnt/lemote/home/loongson/install-trunk-149181/mips64el-unknown-linux-gnu/include -isystem /\
mnt/lemote/home/loongson/install-trunk-149181/mips64el-unknown-linux-gnu/sys-include    -c  -g -O2 -DIN_GCC   -W -Wall -Wwrite-strings -Wcast-qual -Wstrict-prototypes -Wmissing-prototypes  -Wmissing-format-\
attribute -Wno-long-long -Wno-variadic-macros -Wno-overlength-strings -Werror -Wold-style-definition -Wc++-compat -fno-common  -DHAVE_CONFIG_H  -I. -Iada -I../../trunk/gcc -I../../trunk/gcc/ada -I../../trun\
k/gcc/../include -I../../trunk/gcc/../libcpp/include -I/opt/cfarm/gmp-4.2.4-n32/include -I/opt/cfarm/mpfr-2.3.2-n32/include -I../../trunk/gcc/../libdecnumber -I../../trunk/gcc/../libdecnumber/dpd -I../libde\
cnumber    \
              -I. -Iada -I../../trunk/gcc -I../../trunk/gcc/ada -I../../trunk/gcc/../include -I../../trunk/gcc/../libcpp/include -I/opt/cfarm/gmp-4.2.4-n32/include -I/opt/cfarm/mpfr-2.3.2-n32/include -I../.\
./trunk/gcc/../libdecnumber -I../../trunk/gcc/../libdecnumber/dpd -I../libdecnumber   -fno-omit-frame-pointer ../../trunk/gcc/ada/tracebak.c -o ada/tracebak.o
cc1: warnings being treated as errors
../../trunk/gcc/ada/tracebak.c: In function '__gnat_backtrace':
../../trunk/gcc/ada/tracebak.c:497:1: error: old-style function definition
make[3]: *** [ada/tracebak.o] Error 1
make[3]: Leaving directory `/home/guerby/build/gcc'
make[2]: *** [all-stage2-gcc] Error 2
make[2]: Leaving directory `/home/guerby/build'
make[1]: *** [stage2-bubble] Error 2
make[1]: Leaving directory `/home/guerby/build'
make: *** [bootstrap] Error 2

I'm testing the patch below, will commit as obvious if it works

Index: gcc/ada/tracebak.c
===================================================================
--- gcc/ada/tracebak.c	(revision 149204)
+++ gcc/ada/tracebak.c	(working copy)
@@ -494,12 +494,11 @@
  *------------------------------*/
 
 int
-__gnat_backtrace (array, size, exclude_min, exclude_max, skip_frames)
-     void **array ATTRIBUTE_UNUSED;
-     int size ATTRIBUTE_UNUSED;
-     void *exclude_min ATTRIBUTE_UNUSED;
-     void *exclude_max ATTRIBUTE_UNUSED;
-     int skip_frames ATTRIBUTE_UNUSED;
+__gnat_backtrace (void **array ATTRIBUTE_UNUSED,
+                  int size ATTRIBUTE_UNUSED,
+                  void *exclude_min ATTRIBUTE_UNUSED,
+                  void *exclude_max ATTRIBUTE_UNUSED,
+                  int skip_frames ATTRIBUTE_UNUSED)
 {
   return 0;
 }
Comment 1 Laurent Guerby 2009-07-04 10:12:10 UTC
Subject: Bug 40631

Author: guerby
Date: Sat Jul  4 10:11:57 2009
New Revision: 149224

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=149224
Log:
2009-07-04  Laurent GUERBY  <laurent@guerby.net>

	PR ada/40631
	* tracebak.c (__gnat_backtrace): Fix old-style definition.


Modified:
    trunk/gcc/ada/ChangeLog
    trunk/gcc/ada/tracebak.c

Comment 2 Laurent GUERBY 2009-07-04 10:15:26 UTC
Fixed.