2009-07-04  Laurent GUERBY  <laurent@guerby.net>

PR ada/40631
	* tracebak.c (__gnat_backtrace): Fix old-style definition.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@149224 138bc75d-0d04-0410-961f-82ee72b054a4